--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -91,7 +91,11 @@
                     <button class="close-btn" id="close-modal" aria-label="Cerrar modal">&times;</button>
                 </div>
             </div>
-            <iframe id="runner-frame" title="Vista previa de código HTML"></iframe>
+            <iframe 
+                id="runner-frame" 
+                title="Vista previa de código HTML"
+                sandbox="allow-scripts allow-forms"
+            ></iframe>
         </div>
     </div>
     
